--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 @import "~bootstrap/scss/bootstrap.scss";
 * {
   font-family: "Times New Roman", Times, serif;
-  background: #f2f8ff;
+  // background: #f2f8ff;
 }
 .container {
   margin-bottom: 5vh;
