--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
-.App {
+input.col-sm-5 {
+  text-align: center;
+  background-color: rgb(254 249 254 / 96%);
+  /* box-shadow: inset 0.1vw 0.1vw 0.7vw #dee0e2, inset -0.1vw -0.1vw 0.9vw #ffffff; */
+  padding-top: 10px;
+  border: 1px solid #0000000d;
+}
+
+th.col-sm-1.bar {
+  padding-top: 15px;
+}
+.totalTaxableIncome {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  font-family: "Poppins", sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
