--- a/src/App.css
+++ b/src/App.css
@@ -219,3 +219,19 @@ td {
 .es6 {
   margin-bottom: 1000px;
 }
+
+input.col-sm-5 {
+  text-align: center;
+  background-color: rgb(254 249 254 / 96%);
+  /* box-shadow: inset 0.1vw 0.1vw 0.7vw #dee0e2, inset -0.1vw -0.1vw 0.9vw #ffffff; */
+  padding-top: 10px;
+  border: 1px solid #0000000d;
+}
+
+th.col-sm-1.bar {
+  padding-top: 15px;
+}
+.totalTaxableIncome {
+  text-align: center;
+}
+
